--- a/app/src/main/res/layout/fragment_foreign_exchange.xml
+++ b/app/src/main/res/layout/fragment_foreign_exchange.xml
@@ -20,7 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="FX Buddy"
-            android:textColor="@color/black"
+            android:textColor="@color/primaryTextColor"
             android:textSize="40sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/guideline"
@@ -89,6 +89,7 @@
             android:layout_marginTop="36dp"
             android:onClick="@{() -> viewModel.getForeignExchangeRateHistory()}"
             android:text="@string/view_history_button_text"
+            android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
@@ -115,6 +116,7 @@
             android:layout_marginEnd="24dp"
             android:onClick="@{() -> viewModel.getForeignExchangeRate() }"
             android:text="@string/rate_button_text"
+            android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -157,7 +159,7 @@
             android:hint="@string/amount_hint"
             android:inputType="textPersonName"
             android:text="@{viewModel.fxRate}"
-            android:textColor="@color/black"
+            android:textColor="@color/primaryColor"
             android:textSize="24dp"
             app:layout_constraintEnd_toStartOf="@+id/tvResult"
             app:layout_constraintHorizontal_bias="0.5"
@@ -170,7 +172,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="108dp"
             android:contentDescription="@string/floating_action_button_description"
-            android:background="@color/purple_500"
+            android:backgroundTint="@color/primaryDarkColor"
             app:layout_constraintBottom_toBottomOf="@+id/spFromCurrency"
             app:layout_constraintEnd_toStartOf="@+id/spToCurrency"
             app:layout_constraintHorizontal_bias="0.566"
