--- a/app/src/main/res/layout/fragment_foreign_exchange_rate_history.xml
+++ b/app/src/main/res/layout/fragment_foreign_exchange_rate_history.xml
@@ -18,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/history_header"
-            android:textColor="@color/black"
+            android:textColor="@color/primaryTextColor"
             android:textSize="40sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/guideline"
