--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,8 +7,8 @@
 
     <fragment
         android:id="@+id/foreignExchangeFragment"
-        android:name="com.plcoding.currencyconverter.ui.ForeignExchangeFragment"
-        android:label="ForeignExchangeFragment"
+        android:name="com.example.fxbuddy.ui.ForeignExchangeFragment"
+        android:label="FX Buddy"
         tools:layout="@layout/fragment_foreign_exchange">
         <action
             android:id="@+id/action_foreignExchangeFragment_to_foreignExchangeHistoryFragment"
@@ -17,7 +17,7 @@
 
     <fragment
         android:id="@+id/foreignExchangeHistoryFragment"
-        android:name="com.plcoding.currencyconverter.ui.ForeignExchangeHistoryFragment"
-        android:label="ForeignExchangeHistoryFragment"
+        android:name="com.example.fxbuddy.ui.ForeignExchangeHistoryFragment"
+        android:label="History"
         tools:layout="@layout/fragment_foreign_exchange_rate_history" />
 </navigation>
