--- a/app/src/main/res/layout/fragment_foreign_exchange.xml
+++ b/app/src/main/res/layout/fragment_foreign_exchange.xml
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:text="FX Buddy"
             android:textColor="@color/primaryTextColor"
-            android:textSize="40sp"
+            android:textSize="@dimen/text_size_h1"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/guideline"
             app:layout_constraintEnd_toEndOf="parent"
@@ -32,9 +32,9 @@
             android:id="@+id/tvFrom"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="36dp"
+            android:layout_marginTop="@dimen/margin_guide_line"
             android:text="@string/from_header_text"
-            android:textSize="18sp"
+            android:textSize="@dimen/text_size_h4"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@+id/spFromCurrency"
             app:layout_constraintStart_toStartOf="@+id/spFromCurrency"
@@ -44,9 +44,9 @@
             android:id="@+id/tvTo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="36dp"
+            android:layout_marginTop="@dimen/margin_guide_line"
             android:text="@string/to_header_text"
-            android:textSize="18sp"
+            android:textSize="@dimen/text_size_h4"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@+id/spToCurrency"
             app:layout_constraintStart_toStartOf="@+id/spToCurrency"
@@ -63,7 +63,7 @@
             android:id="@+id/spFromCurrency"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="40dp"
+            android:layout_marginStart="@dimen/margin_normal"
             android:layout_marginEnd="144dp"
             android:entries="@array/currency_codes"
             android:padding="15dp"
@@ -75,7 +75,7 @@
             android:id="@+id/spToCurrency"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="40dp"
+            android:layout_marginEnd="@dimen/margin_normal"
             android:entries="@array/currency_codes"
             android:padding="15dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -85,8 +85,7 @@
             android:id="@+id/viewHistoryButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:layout_marginTop="36dp"
+            android:layout_marginHorizontal="@dimen/margin_normal"
             android:onClick="@{() -> viewModel.getForeignExchangeRateHistory()}"
             android:text="@string/view_history_button_text"
             android:textColor="@color/white"
@@ -99,8 +98,8 @@
             android:id="@+id/historyDescriptionTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:paddingHorizontal="40dp"
+            android:layout_marginTop="@dimen/margin_normal"
+            android:paddingHorizontal="@dimen/margin_normal"
             android:text="@string/view_history_description"
             android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
@@ -111,9 +110,8 @@
             android:id="@+id/rateButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="60dp"
-            android:layout_marginEnd="24dp"
+            android:layout_marginHorizontal="@dimen/margin_normal"
+            android:layout_marginTop="@dimen/margin_normal"
             android:onClick="@{() -> viewModel.getForeignExchangeRate() }"
             android:text="@string/rate_button_text"
             android:textColor="@color/white"
@@ -129,7 +127,7 @@
             android:layout_marginEnd="24dp"
             android:text="@{viewModel.selectedToCurrency}"
             android:textColor="@color/black"
-            android:textSize="24dp"
+            android:textSize="@dimen/text_size_h2"
             app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -152,15 +150,15 @@
             android:id="@+id/editTextTextPersonName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="76dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginStart="@dimen/margin_normal"
+            android:layout_marginTop="@dimen/margin_extra_large"
+            android:layout_marginEnd="@dimen/margin_small"
             android:ems="10"
             android:hint="@string/amount_hint"
             android:inputType="textPersonName"
             android:text="@{viewModel.fxRate}"
             android:textColor="@color/primaryColor"
-            android:textSize="24dp"
+            android:textSize="@dimen/text_size_h2"
             app:layout_constraintEnd_toStartOf="@+id/tvResult"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -170,9 +168,9 @@
             android:id="@+id/floatingActionButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="108dp"
-            android:contentDescription="@string/floating_action_button_description"
+            android:layout_marginTop="@dimen/margin_guide_line"
             android:backgroundTint="@color/primaryDarkColor"
+            android:contentDescription="@string/floating_action_button_description"
             app:layout_constraintBottom_toBottomOf="@+id/spFromCurrency"
             app:layout_constraintEnd_toStartOf="@+id/spToCurrency"
             app:layout_constraintHorizontal_bias="0.566"
