--- a/app/src/main/res/layout/fragment_foreign_exchange_rate_history.xml
+++ b/app/src/main/res/layout/fragment_foreign_exchange_rate_history.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:text="@string/history_header"
             android:textColor="@color/primaryTextColor"
-            android:textSize="40sp"
+            android:textSize="@dimen/text_size_h1"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/guideline"
             app:layout_constraintEnd_toEndOf="parent"
