--- a/app/src/main/res/layout/fragment_foreign_exchange_rate_history.xml
+++ b/app/src/main/res/layout/fragment_foreign_exchange_rate_history.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <data>
 
         <variable
@@ -18,13 +18,23 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/history_header"
-            android:textColor="@color/primaryTextColor"
             android:textSize="@dimen/text_size_h1"
             android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/tvScrollDescription"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tvScrollDescription"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/fx_buddy_scroll_description"
             app:layout_constraintBottom_toTopOf="@+id/guideline"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline"
             android:layout_width="wrap_content"
